libroot/unistd: dup3 should return EINVAL if oldFD == newFD.

As per POSIX-2024.

Fixes #19476.